# ChangeLog for games-fps/uhexen2
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Oct 2007; Davide Cendron (scen) <scen@gentoo.org>
  -files/uhexen2-1.4.2_rc1-h2launcher_improvements.diff,
  +uhexen2-1.4.2.ebuild:
  Version bump (and drop old)

  25 Jul 2007; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-1.4.2_rc1.ebuild, +uhexen2-1.4.2_rc2.ebuild:
  Version bump, including some fixes/enhancements (and drop old)

  29 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  uhexen2-1.4.2_rc1.ebuild:
  a different solution to a negated USE check

  13 Jun 2007; Davide Cendron (scen) <scen@gentoo.org>
  uhexen2-1.4.2_rc1.ebuild:
  Get rid of yesno() function

  11 Jun 2007; Davide Cendron (scen) <scen@gentoo.org>
  +uhexen2-1.4.2_rc1.ebuild,
  +files/uhexen2-1.4.2_rc1-h2launcher_improvements.diff, +metadata.xml:
  New Ebuild for bug 105780 thanks to Paul Bredbury and #gentoo-sunrise guys
