@@ -1,9 +1,6 @@
-DIST gamedata-all-1.19-rc2.tgz 3703813 RMD160 1be90cca1a76130ca5c602a7092c3aae3c110465 SHA1 6f2a626a95f368370acf2230932ee7373cecf1f1 SHA256 00f63a7c1aafae08f3786d5d78312f602a667d9ee8fcba43515a505223afe7cd
 DIST gamedata-all-1.19.tgz 3703620 RMD160 091d7fbb6db27dab197ad5932be9f40764b21209 SHA1 f898157169316a6557a70b469976b22ddc3c03cd SHA256 1d291d06f3de337bc0ef13dae3d1c0d7593d5a9308a8a2451196730ffb5fe7b1
-DIST hexen2source-1.4.2-rc2.tgz 2045275 RMD160 700e5d4d2ace7303998f0c25e71043a5573bbf53 SHA1 00d93600348bf88bda907581eaa2965dc796baf7 SHA256 ca56ac2f3a4958ae06c460f6bb43843d2ba78704ad209f3407adc5c78c274e52
 DIST hexen2source-1.4.2.tgz 2062106 RMD160 bc9f000ce11b5be06ddce64e3a6fe09008b5ea71 SHA1 5b4470a615e82f43f7a4d75896402b1c83a93cc3 SHA256 cd12e4a24edf1958e773110493a6ef67947d400eb74be2821c3b6786c7769c49
 DIST hexenworld-pakfiles-0.15.tgz 4956848 RMD160 cd6cafb8e597028e1405638b7a60e1f30ce6d846 SHA1 57af1db9a92f2e41f8fa0f1e5f779f4ec648e730 SHA256 215e92f58bc7ed6098f076b45a20b94092599bfce6c4cd00f2895b24a6ee72fe
 EBUILD uhexen2-1.4.2.ebuild 12831 RMD160 6dc640d9164a44c4faa9a083a017405f9c141ce7 SHA1 1533dc80312d6f77fb55d02fc68a12d88b7f88f3 SHA256 a4ddd3ba640cbb4e10e9a615292f61412ad126c1afce3a0168ebc18a64cfb013
-EBUILD uhexen2-1.4.2_rc2.ebuild 12840 RMD160 c38f95d4df8e07a9964f29d0820cd2b3eb86c120 SHA1 d12d5df2af622f4db594c2ea0d98ca8da7684db7 SHA256 f2a2f965e8c1d84e2d73a84885bcb37c94265fb99a7e63acf1fc862c3142c33d
-MISC ChangeLog 941 RMD160 b201b0a5e4563d5bffe0bfbbed1028940e0684a7 SHA1 99473469cbcc718a3e51eb6b3f072f5a1ce61e36 SHA256 0e272638b9577eb282bd0964b9062240d21ea2b140371780301426c4f2a880fa
+MISC ChangeLog 1054 RMD160 7b8bcf87b23acfb1bf990d53d89c064fe84aab43 SHA1 ce788938c13553e6a545ae7698db0ea6bda4f1ae SHA256 a269098bc1f5e4295c15a64489b44296097f8c13e685ae474b87171e315df6f0
 MISC metadata.xml 321 RMD160 38328099fe4e3737564b5075ba94015829a70953 SHA1 48dbdf9f010778df1a854d8b1cce37da8adfac62 SHA256 df59705cd6050e64fd7d238a1ee22836d82f34a69c0db9d8cc70edfded51dc7e
